ajuste al boton ver carrito

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </script>
 
   <script type="module" src="./src/services/productos.js"></script>
-  <script type="module" src="./src/detalleproducto.js"></script>
+  <script type="module" src="./src/assets/js/detalleproducto.js"></script>
   <script type="module" src="./src/assets/js/modules/mobile.js"></script>
 
 
