--- a/src/pages/cosmetic/belleza.html
+++ b/src/pages/cosmetic/belleza.html
@@ -52,7 +52,10 @@
 
       <!-- Botón Ver Carrito -->
       <div class="verificar">
-        <a href="../cart/carrito.html" class="btn-carrito" id="btn-carrito"
+        <a
+          href="/Decayba/src/pages/cart/carrito.html"
+          class="btn-carrito"
+          id="btn-carrito"
           >Ver Carrito</a
         >
       </div>
