--- a/src/pages/product/detalleprod.html
+++ b/src/pages/product/detalleprod.html
@@ -66,14 +66,37 @@
       </div>
     </aside>
 
-    <script>
-      fetch("/Decayba/src/components/headerglobal.html")
-        .then((response) => response.text())
-        .then(async (html) => {
-          document.getElementById("header").innerHTML = html;
-        });
+    <script type="module">
+      async function inicializarPagina() {
+        try {
+          // 1. Cargar header PRIMERO
+          const headerResponse = await fetch('/Decayba/src/components/headerglobal.html');
+          const headerHtml = await headerResponse.text();
+          document.getElementById('header').innerHTML = headerHtml;
+          console.log('✅ Header cargado');
+
+          // 2. Inicializar aplicación principal
+          const { renderCart } = await import('/Decayba/src/assets/js/modules/renderCart.js');
+          const { actualizarCarritoVisual } = await import('/Decayba/src/assets/js/modules/carrito.js');
+          const { verDetalleProducto } = await import('/Decayba/src/assets/js/modules/detalleProducto.js');
+          
+          window.verDetalleProducto = verDetalleProducto;
+          renderCart();
+          actualizarCarritoVisual();
+          
+          console.log('✅ Página inicializada');
+        } catch (error) {
+          console.error('❌ Error al inicializar:', error);
+        }
+      }
+
+      if (document.readyState === 'loading') {
+        document.addEventListener('DOMContentLoaded', inicializarPagina);
+      } else {
+        inicializarPagina();
+      }
     </script>
-    <script type="module" src="/Decayba/src/assets/js/main.js"></script>
+
     <script>
       const cart = JSON.parse(localStorage.getItem("carrito")) || [];
       const carouselImages = document.querySelector(".carousel-images");
