se ajusta imagen que no se mostraba

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <nav id="header">
 
   </nav>
-
+<img src="/Decayba/src/assets/img/cepillojabon/tapa.webp" alt="">
   <section class="main-container">
 
     <div class="card-container" id="card-container"></div>
