se pone footer en las páginas

--- a/src/pages/product/detalleprod.html
+++ b/src/pages/product/detalleprod.html
@@ -66,22 +66,22 @@
       </div>
     </aside>
 
-     <footer >
+ <footer >
 <div class="pieDePagina">
       <div class="izquierdo">
       <p class="footer-title">SÍGUENOS EN REDES</p>
         <div class="footer-icons">
         <a href="https://www.facebook.com/share/1K2zf4bYPw/" target="_blank">
-          <img src="src/assets/icon/facebook.png" alt="Facebook">
+          <img src="/src/assets/icon/facebook.png" alt="Facebook">
         </a>
         <a href="https://www.tiktok.com/@decayba?_d=secCgYIASAHKAESPgo8EytQ1sHK8ySVLp5ckObNcf%2BPwORASCaky%2Blc9%2Fr2jw5T%2FomWY3alMybYLlTm8pjhjwv0AW8uIo84gjkgGgA%3D&_r=1&_svg=1&checksum=8b4ea6491a486d67ab9a1237e8af8b02e1de5c9d6f2bcce14b251e633f041e35&lang=es&sec_uid=MS4wLjABAAAAIUr2Eb9su1Yc_Wk_35hJqp4xxc1ry8VEDYzLT2LcJhNowNmw8Tg6Squqkp0iU7XK&sec_user_id=MS4wLjABAAAAbF3-kfFpa7nEEt-w3HJ9bMKLBsloUIaM9UB3TOKz4lh1pIkUc7LujIunHt6MRl4C&share_app_id=1340&share_author_id=6676508546471412741&share_link_id=643b91d7-52ff-459c-81af-20c33b250ef3&share_region=CO&share_scene=1&sharer_language=es&source=h5_m&timestamp=1762466620&u_code=ei8jjd136fmj1d&ugbiz_name=Account&user_id=7459417132498682885&utm_campaign=client_share&utm_source=copy" target="_blank">
-          <img src="src/assets/icon/tik-tok.png" alt="TikTok">
+          <img src="/src/assets/icon/tik-tok.png" alt="TikTok">
         </a>
         <a href="https://www.instagram.com/decayba19/?next=https%3A%2F%2Fwww.instagram.com%2Fp%2FB_eyX3hnQAb%2Fc%2F18142595998040329%2F%3F__coig_login%3D1" target="_blank">
-          <img src="src/assets/icon/instagram.png" alt="Instagram">
+          <img src="/src/assets/icon/instagram.png" alt="Instagram">
         </a>
         <a href="https://api.whatsapp.com/send/?phone=573154380079&text&type=phone_number&app_absent=0" target="_blank">
-          <img src="src/assets/icon/whatsapp.png" alt="WhatsApp">
+          <img src="/src/assets/icon/whatsapp.png" alt="WhatsApp">
         </a>
       </div>
     </div>
