--- a/src/pages/Toys/juguetes.html
+++ b/src/pages/Toys/juguetes.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../../assets/css/juguetes.css" />
   <link rel="stylesheet" href="../../assets/css/header.css" />
   <link rel="stylesheet" href="../../assets/css/home.css" />
- <link rel="stylesheet" href="./src/assets/css/footer.css" />
+ <link rel="stylesheet" href="../../assets/css/footer.css" />
   <link rel="stylesheet" href="../../assets/css/carrito.css" />
   <link rel="stylesheet" href="../../assets/css/tituloSugerencias.css">
   <link rel="stylesheet" href="../../assets/css/home.css">
