--- a/src/pages/Toys/juguetes.html
+++ b/src/pages/Toys/juguetes.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../../assets/css/global.css" />
   <link rel="stylesheet" href="../../assets/css/juguetes.css" />
   <link rel="stylesheet" href="../../assets/css/header.css" />
-  <link rel="stylesheet" href="../../assets/css/home.css" />
+  <!-- <link rel="stylesheet" href="../../assets/css/home.css" /> -->
  <link rel="stylesheet" href="../../assets/css/footer.css" />
   <link rel="stylesheet" href="../../assets/css/carrito.css" />
   <link rel="stylesheet" href="../../assets/css/tituloSugerencias.css">
