--- a/src/pages/cart/carrito.html
+++ b/src/pages/cart/carrito.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../../assets/css/mobile.css" />
     <link rel="stylesheet" href="../../assets/css/header.css" />
     <link rel="stylesheet" href="../../assets/css/footer.css" />
-    <link rel="stylesheet" href="../../assets/css/home.css" />
+    <!-- <link rel="stylesheet" href="../../assets/css/home.css" /> -->
     <link rel="stylesheet" href="../../assets/css/cart.css" />
     <link rel="stylesheet" href="../../assets/css/tituloSugerencias.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
