--- a/src/pages/cosmetic/belleza.html
+++ b/src/pages/cosmetic/belleza.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../../assets/css/belleza.css" />
    <link rel="stylesheet" href="../../assets/css/mobile.css">
    <link rel="stylesheet" href="../../assets/css/tituloSugerencias.css">
-    <link rel="stylesheet" href="../../assets/css/home.css" />
+    <!-- <link rel="stylesheet" href="../../assets/css/home.css" /> -->
     <link rel="stylesheet" href="../../assets/css/detalleprod.css" />
     <link rel="stylesheet" href="./src/assets/css/footer.css" />
     
