--- a/src/pages/pets/mascotas.html
+++ b/src/pages/pets/mascotas.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="../../assets/css/global.css" />
     <link rel="stylesheet" href="../../assets/css/header.css" />
-    <link rel="stylesheet" href="../../assets/css/home.css" />
+    <!-- <link rel="stylesheet" href="../../assets/css/home.css" /> -->
     <link rel="stylesheet" href="/src/assets/css/footer.css" />
     <link rel="stylesheet" href="../../assets/css/carrito.css" />
     <link rel="stylesheet" href="../../assets/css/mobile.css">
