--- a/src/pages/cosmetic/belleza.html
+++ b/src/pages/cosmetic/belleza.html
@@ -5,22 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Belleza</title>
 
-    <link rel="stylesheet" href="../../assets/css/global.css" />
-    <link rel="stylesheet" href="../../assets/css/header.css" />
-    <link rel="stylesheet" href="../../assets/css/footer.css" />
-    <link rel="stylesheet" href="../../assets/css/carrito.css" />
-    <link rel="stylesheet" href="../../assets/css/belleza.css" />
-   <link rel="stylesheet" href="../../assets/css/mobile.css">
-   <link rel="stylesheet" href="../../assets/css/tituloSugerencias.css">
-    <!-- <link rel="stylesheet" href="../../assets/css/home.css" /> -->
-    <link rel="stylesheet" href="../../assets/css/detalleprod.css" />
-    <link rel="stylesheet" href="./src/assets/css/footer.css" />
-    
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
-      rel="stylesheet"
-    />
+ <link rel="stylesheet" href="../../assets/css/global.css" />
+  <link rel="stylesheet" href="../../assets/css/juguetes.css" />
+  <link rel="stylesheet" href="../../assets/css/header.css" />
+  <!-- <link rel="stylesheet" href="../../assets/css/home.css" /> -->
+ <link rel="stylesheet" href="../../assets/css/footer.css" />
+  <link rel="stylesheet" href="../../assets/css/carrito.css" />
+  <link rel="stylesheet" href="../../assets/css/tituloSugerencias.css">
+  <link rel="stylesheet" href="../../assets/css/home.css">
+  <link rel="stylesheet" href="../../assets/css/detalleprod.css" />
+  <link rel="stylesheet" href="../../assets/css/mobile.css">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet" />
   </head>
 
   <body>
