--- a/src/pages/product/detalleprod.html
+++ b/src/pages/product/detalleprod.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="../../assets/css/global.css" />
     <link rel="stylesheet" href="../../assets/css/header.css" />
-    <!-- <link rel="stylesheet" href="../../assets/css/home.css" /> -->
+    <link rel="stylesheet" href="../../assets/css/home.css" />
     <link rel="stylesheet" href="../../assets/css/footer.css" />
     <link rel="stylesheet" href="../../assets/css/carrito.css" />
     <link rel="stylesheet" href="../../assets/css/tituloSugerencias.css" />
